Fix spacing on images

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -647,6 +647,10 @@ video {
   margin-left: 1rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
 }
